--- a/templates/user/confirmation.html.twig
+++ b/templates/user/confirmation.html.twig
@@ -3,7 +3,6 @@
     <div class="confirmation">
         <h2>Bravo vous êtes inscrit</h2>
         <p>Un mail de confirmation vous a été envoyé</p>
-        <a href="/admin">admin
-        </a>
+        <a href="/admin">> admin</a>
     </div>
 {% endblock %}
